# Tailspring

./: .gitignore  CMakeLists.txt  FindTailspring.cmake  Findtailspring.cmake  README.md  tailspring_header_gen.py
ld_scripts/: tailspring.ld
lib/: CMakeLists.txt
lib/include/: tailspring.h
lib/include_shared/: tailspring_shared.h
lib/src/: tailspring.c
py/: main.py  tailspring_core.py  tailspring_gen.py  tailspring_globals.py  tailspring_paging.py  tailspring_startup_threads.py  tailspring_types.py
py/tailspring/: cli_args.py  context.py  fragment_gen.py  obj_file_gen.py  op_types.py  ops_gen.py  paging.py  thread_setup.py  ts_enums.py  ts_types.py  wrapper_creator.py
src/: get_sel4_info.c  get_sel4_info.cpp  tailspring.c  tailspring.cpp  tailspring.hpp
